--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8">
     <link rel="icon" href="/t-dt.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>T-DT 创新实验室</title>
+    <title>东北大学T-DT创新实验室</title>
+
+    <meta name="keywords" content="T-DT, 东北大学, tdt, t-dt, TDT, 机器人, 东北大学T-DT, 东北大学tdt, 东北大学机器人, RoboMaster, 全国大学生机器人大赛, 机甲大师, Robocon, robotic, 东北大学t-dt, 东北大学TDT, 官网, 主页, 简介, 计算机视觉, 竞赛团队, 机械, 自动化, 嵌入式, 控制工程, 计算机, 算法">
+    <meta name="description" content="T-DT机器人创新团队( Thinking - Doing to Theory )是东北大学创新创业学院下辖的创新团队之一，成立于2012年，汇聚了东北大学包括机械，信息，计算机和软件在内的各个学院的优秀学生。团队共分为机械、电控、算法、运营等四个部门和七个技术兵种组，给学生提供了可以自我研发，自我展示的平台，旨在培养出有独特主张，丰富想象力，超凡创造力的优秀青年工程师。自成立以来，团队技术成果丰硕，多次在国际级和国家级竞赛中斩获冠军，被莅临参观的校内外各级领导与老师给予高度评价。">
   </head>
   <body>
     <div id="app"></div>
